devops/kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql
  namespace: food-app

spec:

  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:

      containers:

      - name: mysql

        image: mysql:8.0

        ports:

        - containerPort: 3306

        volumeMounts:

        - mountPath: /var/lib/mysql
          name: mysql-storage

      volumes:

      - name: mysql-storage

        persistentVolumeClaim:
          claimName: mysql-pvc
